@@ -14,8 +14,8 @@ Overview
 
  Full ReleaseNotes can be seen in {{{http://sourceforge.net/p/jrtps/code/ci/default/tree/ReleaseNotes}here}}
 
- 0.9.4
+ 0.9.5
 
- * Removed SampleKey. KeyHash is adequate to represent a key of samples and instances.
+ * handle INFO_DESTINATION
  
- * WriterLivelinessListener adds support for detecting loss of liveliness of writers.
+ * Detect of restoration of liveliness. 
